# TranscriptionCoder

./: .gitignore  README.md
TranscriptionCoder/: pyproject.toml
TranscriptionCoder/transcriptioncoder/: audio_processor.py  main.py
